# Games2

./: .gitignore  CMakeLists.txt  create_venv  requirements.txt
Games/: CMakeLists.txt  Games.cpp  Games.h  cards.h  ml.cpp  ml.h
Games/euchre/: __init__.py  core.cpp  core.h  jseuchre.cpp
Games/euchre/cores/markov/: core_markov.cpp  core_markov.h  workshop.py
Games/euchre/cores/random/: core_random.cpp  core_random.h
Games/hearts/: __init__.py  core.h  main.py  pyhearts.cpp
Games/hearts/modules/: module.h
Games/hearts/modules/markov/: module_markov.cpp  module_markov.py
Games/hearts/modules/random/: module_random.h
games/: __init__.py  cards.cpp  cards.h  local_runner.py  logging.h  markov.h  math_util.h  ml.cpp  ml.h  pygames.cpp  workshop.py
games/euchre/: __init__.py  core.cpp  core.h  jseuchre.cpp  main.py  pyeuchre.cpp  test.py
games/euchre/cores/markov/: core_markov.cpp  core_markov.h  core_markov.py  local_runner.py  models.py  (+1 more)
games/hearts/: core.cpp
games/oh_hell/: __init__.py  pyohhell.cpp
games/oh_hell/misc/: spreadsheet.h  spreadsheet.py
tools/: hdf5.py
web/: ai.js  binding.gyp  card.js  core.js  euchre.js  hearts.js  index.js  logging.js  ml.js  oh_hell.js  package-lock.json  run.bat
web/models/euchre/: inn.txt  onn.txt  pnn.txt  rnn.txt  tnn.txt  wnn.txt
web/public/: basics.js  canvas.js  graphics_tools.js  index.html  interactable.js  main.js  postgame.js  scoresheet.js  state.js  tailwind_dark.css
web/public/cached_games/: 1688001864623.ohw  1688002761706.ohw
web/public/modes/: base.js  euchre.js  hearts.js  oh_hell.js
(+44 files in other folders)
